--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -60,6 +60,7 @@
             <a
               class="footer-text"
               href="https://www.google.com/maps/place/1678+Pioneer+Rd,+Salt+Lake+City,+UT+84104,+Stany+Zjednoczone/@40.7335892,-111.9626616,17z/data=!3m1!4b1!4m6!3m5!1s0x8752f35b0826d399:0x2b26230524fd3ca3!8m2!3d40.7335892!4d-111.9600867!16s%2Fg%2F11bw41vm_p?entry=ttu"
+              target="_blank"
               >1678 S. Pioneer Road<br />
               Salt Lake City UT<br />
               84104</a
