--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -6,12 +6,13 @@
 .footer-tablet-wrap {
   display: flex;
   flex-direction: column;
+  gap: 20px;
 }
 
 .footer-background {
   background-color: var(--white-color);
-  margin-top: 80px;
-  margin-bottom: 80px;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
 
 .footer-image-container {
@@ -27,7 +28,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20 0 20 0;
+  margin-top: 20px;
 }
 
 .footer-text-logo {
@@ -56,14 +57,15 @@
 .footer-socials {
   display: flex;
   justify-content: center;
-  margin-bottom: 40px;
+  // margin-bottom: 40px;
+  gap: 20px;
+  padding: 40px 0 40px 0;
 }
 
 .footer-socials-logo {
   width: 40px;
   height: 40px;
   border: 1px;
-  margin: 10px;
   border-radius: 10px;
 
   transition: background-color 0.3s;
@@ -77,18 +79,21 @@
 .footer-menu {
   display: flex;
   justify-content: center;
-  margin-bottom: 40px;
+  padding: 10px 0 10px 0;
+  gap: 20px;
 }
 
 .footer-menu-item {
   display: block;
-  margin: 10px;
+  // margin: 10px;
+  // gap: 20px;
   color: var(--bg-color);
 }
 
 .footer-contact {
   color: var(--bg-color);
   text-align: center;
+  font-style: normal;
 }
 
 @media screen and (min-width: 768px) {
@@ -100,11 +105,20 @@
   .footer-contact {
     text-align: left;
   }
-  .footer-logo {
-    margin-bottom: 80px;
-  }
+
+  // .footer-logo {
+  // margin-bottom: 80px;
+  // }
+
   .footer-socials {
-    margin-top: 40px;
+    // margin-top: 40px;
+    justify-content: left;
+  }
+  .footer-menu {
+    padding: 0;
+  }
+  .footer-tablet-wrap {
+    gap: 80px;
   }
 }
 
@@ -113,14 +127,12 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 220px;
   }
-  .footer-logo {
-    margin-bottom: 0;
-  }
-  .footer-menu {
-    margin-left: 240px;
-  }
-  .footer-socials {
-    margin-top: 0;
-  }
+  // .footer-logo {
+  //   margin-bottom: 0;
+  // }
+  // .footer-socials {
+  //   margin-top: 0;
+  // }
 }
