--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -132,7 +132,7 @@
   // .footer-logo {
   //   margin-bottom: 0;
   // }
-  // .footer-socials {
-  //   margin-top: 0;
-  // }
+  .footer-socials {
+    padding: 0 0 40px 0;
+  }
 }
