--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -21,12 +21,14 @@
                 alt="Happy girl holding bananas in ger hands"
               />
             </picture>
-            <div class="footer-logo">
-              <svg class="footer-icon-logo" width="16" height="16">
-                <use href="./images/icons.svg#icon-logo"></use>
-              </svg>
-              <span class="footer-text-logo">fresh harvest box</span>
-            </div>
+            <a href="./index.html">
+              <div class="footer-logo">
+                <svg class="footer-icon-logo" width="16" height="16">
+                  <use href="./images/icons.svg#icon-logo"></use>
+                </svg>
+                <span class="footer-text-logo">fresh harvest box</span>
+              </div>
+            </a>
           </div>
           <div class="footer-tablet-wrap">
             <ul class="footer-menu">
