--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,39 +1,40 @@
-<header class="header container">
+<header class="header">
+  <div class="container header-wrap">
     <nav class="nav-layout">
-        <ul class="site-nav">
-          <li><a href="" class="link" id="how-it-works">How It Works</a></li>
-          <li><a href="" class="link" id="fruits">Fruits</a></li>
-          <li><a href="" class="link" id="contacts">Contacts</a></li>
-        </ul>
-
-        <ul class="list off-screen-menu">
-            <li><a href="" class="link" id="how-it-works">How It Works</a></li>
-            <li><a href="" class="link" id="fruits">Fruits</a></li>
-            <li><a href="" class="link" id="contacts">Contacts</a></li>
-            <li>
-              <svg class="icon icon-basket-white" width="28" height="28">
-                <use xlink:href="./images/icons.svg#icon-basket-white"></use>
-              </svg>
-            </li>
-        </ul>
-        <div class="logo-box">
-            <svg class="logo" width="16" height="16">
-                <use href="./images/icons.svg#icon-logo"></use>
-            </svg>
-            <a href="./index.html" class="logo-text">fresh harvest box
-            </a>
-        </div>
-        <div>
-            <svg class="icon-basket" width="18.67" height="23.33">
-                <use href="./images/icons.svg#icon-basket"></use>
-            </svg>
-        </div>
-        <div class="ham-menu">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
+      <ul class="site-nav">
+        <li><a href="" class="link" id="how-it-works">How It Works</a></li>
+        <li><a href="" class="link" id="fruits">Fruits</a></li>
+        <li><a href="" class="link" id="contacts">Contacts</a></li>
+      </ul>
+      <ul class="list off-screen-menu">
+        <li><a href="" class="link" id="how-it-works">How It Works</a></li>
+        <li><a href="" class="link" id="fruits">Fruits</a></li>
+        <li><a href="" class="link" id="contacts">Contacts</a></li>
+        <li>
+          <svg class="icon icon-basket-white" width="28" height="28">
+            <use xlink:href="./images/icons.svg#icon-basket-white"></use>
+          </svg>
+        </li>
+      </ul>
+      <div class="logo-box">
+        <svg class="logo" width="16" height="16">
+          <use href="./images/icons.svg#icon-logo"></use>
+        </svg>
+        <a href="./index.html" class="logo-text">fresh harvest box
+        </a>
+      </div>
+      <div class="ham-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </nav>
+    <button type="button" class="button-header">
+      <svg class="icon-basket" width="18.67" height="23.33">
+        <use href="./images/icons.svg#icon-basket"></use>
+      </svg>
+    </button>
+  </div>
 </header>
 
 <script>
