HTML changes - header
dodane href

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,14 +2,14 @@
   <div class="container header-wrap">
     <nav class="nav-layout">
       <ul class="site-nav">
-        <li><a href="" class="link" id="how-it-works">How It Works</a></li>
-        <li><a href="" class="link" id="fruits">Fruits</a></li>
-        <li><a href="" class="link" id="contacts">Contacts</a></li>
+        <li><a href="#how-it-works" class="link">How It Works</a></li>
+        <li><a href="#fruits" class="link">Fruits</a></li>
+        <li><a href="#contacts" class="link">Contacts</a></li>
       </ul>
       <ul class="list off-screen-menu">
-        <li><a href="" class="link" id="how-it-works">How It Works</a></li>
-        <li><a href="" class="link" id="fruits">Fruits</a></li>
-        <li><a href="" class="link" id="contacts">Contacts</a></li>
+        <li><a href="#how-it-works" class="link">How It Works</a></li>
+        <li><a href="#fruits" class="link">Fruits</a></li>
+        <li><a href="#contacts" class="link">Contacts</a></li>
         <li>
           <svg class="icon icon-basket-white" width="28" height="28">
             <use xlink:href="./images/icons.svg#icon-basket-white"></use>
