--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="contacts">
+<section class="contacts" id="contacts">
   <div class="container">
     <h1 class="contacts-main-paragraph">Fresh Harvest Box has got you covered</h1>
 
