--- a/src/sass/_thankyou.scss
+++ b/src/sass/_thankyou.scss
@@ -8,8 +8,8 @@
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  opacity: 0;
-  visibility: hidden;
+  opacity: 1;
+  visibility: visible;
 }
 
 .modal-thankyou {
