--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -39,6 +39,9 @@
 .header-wrap .icon-basket {
     display: none;
 }
+.off-screen-menu .icon-wrap {
+    margin-bottom: 190px;
+}
 
 /* off-screen-menu */
 .off-screen-menu {
