--- a/src/partials/fruits.html
+++ b/src/partials/fruits.html
@@ -1,4 +1,4 @@
-<section class="fruits">
+<section class="fruits" id="fruits">
     <div class="container">
         <div class="fruit-header">
         <div class="fruit-header-container">
