--- a/src/partials/thankyou.html
+++ b/src/partials/thankyou.html
@@ -34,6 +34,6 @@
 
 <script>
   document.querySelector('#thankyou-btn').addEventListener('click', () => {
-    document.querySelector('#modal-thankyou').classList.add('is-hidden');
+    document.querySelector('#modal-thankyou').classList.add('is-visible');
   });
 </script>
