--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -93,3 +93,8 @@
     </div>
   </div>
 </section>
+<script>
+  document.querySelector('#contacts-modal-button').addEventListener('click', () => {
+    document.querySelector('#modal-thankyou').classList.add('is-visible');
+  });
+</script>
