--- a/src/partials/fruits.html
+++ b/src/partials/fruits.html
@@ -142,3 +142,9 @@
         </div>
     </div>
 </section>
+
+<script>
+    document.querySelector('#order-btn-click').addEventListener('click', () => {
+      document.querySelector('#modal-thankyou').classList.add('is-hidden');
+    });
+  </script>
