--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -51,7 +51,7 @@
         
 
         <button class="hero-shop-button" type="button">
-            <a class="hero-shop-link" href="#organic_fruits">shop now</a>
+            <a class="hero-shop-link" href="#fruits">shop now</a>
         </button>
     </div>
 
