--- a/src/partials/fruits.html
+++ b/src/partials/fruits.html
@@ -145,6 +145,6 @@
 
 <script>
     document.querySelector('#order-btn-click').addEventListener('click', () => {
-      document.querySelector('#modal-thankyou').classList.add('is-hidden');
+      document.querySelector('#modal-thankyou').classList.add('is-closed');
     });
   </script>
