--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -95,6 +95,6 @@
 </section>
 <script>
   document.querySelector('#contacts-modal-button').addEventListener('click', () => {
-    document.querySelector('#modal-thankyou').classList.add('is-visible');
+    document.querySelector('#modal-thankyou').classList.add('is-closed');
   });
 </script>
