--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -94,7 +94,7 @@
   </div>
 </section>
 <script>
-  document.querySelector('#contacts-modal-button').addEventListener('click', () => {
+  document.querySelector('#contacts-modal-button').addEventListener('submit', () => {
     document.querySelector('#modal-thankyou').classList.add('is-closed');
   });
 </script>
